# NDShin

./: .gitignore  CMakeLists.txt
build-release/: compile_commands.json  ndshin
src/: CMakeLists.txt  camera.cpp  camera.h  camera3d.cpp  camera3d.h  ellipsoid.cpp  ellipsoid.h  hyperbox.cpp  hyperbox.h  hyperplane.h  light.h  main.cpp  math4.h  ray.h  raytracer.cpp  raytracer.h  scene.cpp  scene.h  shape.h  sphere.cpp  sphere.h  window.cpp  window.hpp
